Challenge4/tripviewer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tripinsights-trip-viewer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tripinsights-trip-viewer
  template:
    metadata:
      labels:
        app: tripinsights-trip-viewer
        aadpodidbinding: kv-id
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: tripinsights-trip-viewer
        image: registrycbz8543.azurecr.io/tripinsights/tripviewer:1.0
        volumeMounts:
        - name: secrets-store-inline
          mountPath: "/secrets"
          readOnly: true
        ports:
        - containerPort: 80
          name: tripviewer-port
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
              cpu: 250m
              memory: 256Mi
      volumes:
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "azure-kvname"
---
apiVersion: v1
kind: Service
metadata:
  name: tripinsights-trip-viewer
spec:
  ports:
  - port: 80
  type: ClusterIP
  selector:
    app: tripinsights-trip-viewer
